--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ext-libxml": "*",
         "ext-json": "*",
         "ext-bcmath": "*",
-        "yansongda/supports": "^2.0",
+        "boboxiaodd/supports": "^2.0",
         "symfony/http-foundation": "^4.0 || ^5.0.7",
         "symfony/event-dispatcher": "^4.0 || ^5.0"
     },
